# stevesbbs-voice-identification

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
app/: config.py  cytracom.py  enrollment.py  godwin_client.py  main.py  pipeline.py  speaker_id.py  transcribe.py  webhook.py
docs/: reallocate-contract.md  technician-management.md  webhook-contract-v2.md
enrollment_audio/: README.md
mock_data/: calls.json
scripts/: enroll.py  mock_godwin.py  sweep.py
tests/: test_speaker_id.py
