[project]
name = "stevesbbs-voice-identification"
version = "0.1.0"
description = "Speaker ID + transcription service for Steve's Computers."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "resemblyzer>=0.1.4",
    "faster-whisper>=1.0.3",
    "numpy>=1.26",
    "soundfile>=0.12",
    "librosa>=0.10",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]
